# llm_eval_simulation

./: .editorconfig  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  ReadMe.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AUTO_SYNC.md  GITHUB_PUBLISH.md  PROJECT_STRUCTURE.md
scripts/: generate_manuscript_docx.py
src/: __init__.py  alternative_methods.py  bootstrap_stability.py  config.py  data_simulator.py  density_quadrant.py  icc_comparison_experiment.py  icc_utils.py  layer1_reliability.py  layer2_consensus.py  layer3_decision.py  layer4_skill_diagnosis.py  monte_carlo.py  pipeline.py  small_scale_experiment.py  threshold_sensitivity.py  visualizations.py
tests/: test_smoke.py
